# TetrisAI

./: .gitignore  CMakeLists.txt  GitUpdate.ps1  LICENSE.md  README.md  build.cmd  build.ps1  build_all.cmd  clean.cmd  git_update.cmd  module.ps1  run.ps1
ai/include/: AI.hpp  IChildFilter.hpp  ISearchListener.hpp  Orientation.hpp  PlayfieldEvaluation.hpp  PlayfieldUtil.hpp  Point.hpp  Queue.hpp  Searcher.hpp  State.hpp  Tetriminos.hpp
ai/src/: AI.cpp  Orientation.cpp  PlayfieldEvaluation.cpp  PlayfieldUtil.cpp  Point.cpp  Queue.cpp  Searcher.cpp  State.cpp  Tetriminos.cpp
